--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
   </script>
 
   <!-- Scripts -->
-  <script src="scripts/jquery/dist/jquery.min.js"></script>
+  <script src="jquery.min.js"></script>
   <script src="scripts/semantic-ui-css/semantic.min.js"></script>
   <script src="scripts/handlebars/dist/handlebars.min.js "></script>
   <script src="scripts/simplewebrtc/out/simplewebrtc-with-adapter.bundle.js"></script>
