--- a/public/index.html
+++ b/public/index.html
@@ -119,10 +119,10 @@
   </script>
 
   <!-- Scripts -->
-  <script src="scripts/jquery/dist/jquery.min.js"></script>
-  <script src="scripts/semantic-ui-css/semantic.min.js"></script>
-  <script src="scripts/handlebars/dist/handlebars.min.js "></script>
-  <script src="scripts/simplewebrtc/out/simplewebrtc-with-adapter.bundle.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/semantic.min.js"></script>
+  <script src="js/handlebars.min.js "></script>
+  <script src="js/simplewebrtc-with-adapter.bundle.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
